# ongoma

./: .clang-format  .gitignore  .gitmodules  README
src/: CMakeLists.txt
src/Source/: AppConfig.h  Main.cpp  MainComponent.cpp  MainComponent.h  PianoRollComponent.cpp  PianoRollComponent.h
